--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ stages:          # List of stages for jobs, and their order of execution
   - build
   - test
   - deploy
+# pip freeze > requirements.txt
 # pip install -r requirements.txt
 
 build-job:       # This job runs in the build stage, which runs first.
@@ -28,8 +29,8 @@ build-job:       # This job runs in the build stage, which runs first.
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
+    - echo "Running unit tests... This will take about 25 seconds."
+    - sleep 25
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
